--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -8,7 +8,9 @@
   <body>
     <h1>Index File</h1>
     <figure>
-      <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="placeholder image">
+      <a href="https://www.instagram.com/sincerelysimz_/" target="_blank">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="placeholder image">
+      </a>
       <figcaption>placeholder image</figcaption>
     </figure>
     <h2>Paragrap 1</h2>
