--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Basic html file</title>
+  </head>
+  <body>
+    <a href="<blockquote class="twitter-tweet"><p lang="en" dir="ltr">What Cassie did, will go down in history. I hope every woman knows that it only takes one person to be brave. She just shut down an entire enterprise and probably saved future lives.</p>&mdash; 🇰🇪 (@evelynvwoodsen) <a href="https://twitter.com/evelynvwoodsen/status/1836049826934407623?ref_src=twsrc%5Etfw">September 17, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>">Here''s to women💪</a>
+  </body>
+</html>
