--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,22 +6,42 @@
     <title>Basic html file</title>
   </head>
   <body>
-    <h1>Index File</h1>
-    <figure>
-      <a href="https://www.instagram.com/sincerelysimz_/" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="placeholder image">
-      </a>
-      <figcaption>placeholder image</figcaption>
-    </figure>
-    <h2>Paragrap 1</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <h2>Paragraph 2</h2>
-    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <h2>Paragraph 3</h2>
-    <p>Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris. Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate vehicula. Donec lobortis risus a elit. Etiam tempor. Ut ullamcorper, ligula eu tempor congue, eros est euismod turpis, id tincidunt sapien risus a quam.</p>
-    <h2>Paragraph 4</h2>
-    <p>Maecenas fermentum consequat mi. Donec fermentum. Pellentesque malesuada nulla a mi. Duis sapien sem, aliquet nec, commodo eget, consequat quis, neque. Aliquam faucibus, elit ut dictum aliquet, felis nisl adipiscing sapien, sed malesuada diam lacus eget erat</p>
-    <h3>Check me out</h3>
-    <a href="html_basic/tweets.html" target="_blank">Peep my tweets</a>
+    <header>
+      <ul>
+        <li>
+          <a href="">Home</a>
+        </li>
+        <li>
+          <a href="">Tweets</a>
+        </li>
+      </ul>
+      <h1>Index File</h1>
+    </header>
+    <main>
+      <article>
+      <figure>
+        <a href="https://www.instagram.com/sincerelysimz_/" target="_blank">
+          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="placeholder image">
+        </a>
+        <figcaption>placeholder image</figcaption>
+      </figure>
+      <h2>Paragrap 1</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h2>Paragraph 2</h2>
+      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2>Paragraph 3</h2>
+      <p>Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris. Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate vehicula. Donec lobortis risus a elit. Etiam tempor. Ut ullamcorper, ligula eu tempor congue, eros est euismod turpis, id tincidunt sapien risus a quam.</p>
+      <h2>Paragraph 4</h2>
+      <p>Maecenas fermentum consequat mi. Donec fermentum. Pellentesque malesuada nulla a mi. Duis sapien sem, aliquet nec, commodo eget, consequat quis, neque. Aliquam faucibus, elit ut dictum aliquet, felis nisl adipiscing sapien, sed malesuada diam lacus eget erat</p>
+      <h3>Check me out</h3>
+      <a href="html_basic/tweets.html" target="_blank">Peep my tweets</a>
+      </article>
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+    <footer>
+      <p>Made by <a href="https://www.instagram.com/sincerelysimz_" target="_blank">Lindi S</a></p>
+    </footer>
   </body>
 </html>
