--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -9,7 +9,7 @@
     <header>
       <ul>
         <li>
-          <a href="">Home</a>
+          <a href="html_basic/index.html">Home</a>
         </li>
         <li>
           <a href="">Tweets</a>
