--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -12,7 +12,7 @@
           <a href="html_basic/index.html">Home</a>
         </li>
         <li>
-          <a href="">Tweets</a>
+          <a href="html_basic/tweets.html">Tweets</a>
         </li>
       </ul>
       <h1>Index File</h1>
