--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -41,7 +41,7 @@
       </aside>
     </main>
     <footer>
-      <p>Made by Lindi S - <a href="https://www.instagram.com/sincerelysimz_">here</a></p>
+      <p>Made by Lindi S - <a href="https://www.instagram.com/sincerelysimz_" target="_blank">here</a></p>
     </footer>
   </body>
 </html>
