--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -35,6 +35,31 @@
       <p>Maecenas fermentum consequat mi. Donec fermentum. Pellentesque malesuada nulla a mi. Duis sapien sem, aliquet nec, commodo eget, consequat quis, neque. Aliquam faucibus, elit ut dictum aliquet, felis nisl adipiscing sapien, sed malesuada diam lacus eget erat</p>
       <h3>Check me out</h3>
       <a href="html_basic/tweets.html" target="_blank">Peep my tweets</a>
+        <table>
+          <tr>
+            <thead>Name</thead>
+            <thead>Age</thead>
+            <thead>Country</thead>
+          </tr>
+          <tr>
+            <tbody>John</tbody>
+            <tbody>Emily</tbody>
+            <tbody>Michael</tbody>
+            <tbody>dSophia</tbody>
+          </tr>
+          <tr>
+            <tbody>25</tbody>
+            <tbody>28</tbody>
+            <tbody>32</tbody>
+            <tbody>21</tbody>
+          </tr>
+          <tr>
+            <tbody>USA</tbody>
+            <tbody>Canada</tbody>
+            <tbody>Australia</tbody>
+            <tbody>UK</tbody>
+          </tr>
+        </table>
       </article>
       <aside>
         <p>placeholder to add comment thread later</p>
