--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -65,11 +65,11 @@
         <h2>Contact</h2>
         <a href="mailto:lindistallenberg97@icloud.com" target="_blank">Email</a>
         <a href="linkedin.com/in/simlindile-stallenberg" target="_blank">LinkedIn</a>
-        <a href="" target="_blank">GitHub</a>
+        <a href="https://github.com/Lindisimz97" target="_blank">GitHub</a>
       </section>
     </main>
     <footer>
-      <p></p>
+      <p>&copy; 2024 Simlindile Stallenberg</p>
     </footer>
   </body>
 </html>
